--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "Biología-computacional"
+  title: "Grupo de Biología Computacional"
   navbar:
     left:
       - href: index.qmd
