--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,7 @@ website:
       - proyectos.qmd
       - club-de-revista.md
       - cursos.md
+      - posts.md
     tools:
       - icon: envelope-fill
         href: mailto:biologiacomputacional42@gmail.com
