--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,11 +27,14 @@ website:
   margin-header: |
     ![](/imgs/profile.png)
   favicon: /imgs/favicon.png
+  twitter-card:
+    creator: "@Nesper94"
 
 format:
   html:
-    theme: cosmo
-#    theme: minty
+    theme:
+      light: cosmo
+      dark: darkly
     css: styles.css
     toc: true
 
