--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,7 +7,8 @@ website:
   title: "Grupo de Biología Computacional"
   navbar:
     left:
-      - integrantes.md
+      - url: integrantes.md
+        icon: people-fill
       - url: proyectos.qmd
         icon: terminal-fill
       - url: club-de-revista.md
