Club de revista de Drive
Actualizar la tabla con el club de revista cargando la información
directamente desde una hoja de cálculo de Google Drive.
Basado en: https://github.com/vizdata-s24/vizdata-s24/blob/main/index.qmd

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
         icon: people-fill
       - url: proyectos.qmd
         icon: terminal-fill
-      - url: club-de-revista.md
+      - url: club-de-revista.qmd
         icon: easel3-fill
       - text: 'Cursos'
         icon: journal-code
