Poner navbar a la derecha

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,7 @@ lang: es
 website:
   title: "Grupo de Biología Computacional"
   navbar:
-    left:
+    right:
       - url: integrantes.md
         icon: people-fill
       - url: proyectos.qmd
